--- a/views/index.pug
+++ b/views/index.pug
@@ -6,9 +6,12 @@ block content
 
     button.access.waves-effect.waves-light.btn(value = 'user') Access as User
     button.access.waves-effect.waves-light.btn(value = 'manager') Access as Manager
-    button.access.waves-effect.waves-light.btn(value = 'supervisor') Access as Supervisor
+
+    table#displayTable
 
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
+    script(type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.15/b-1.3.1/se-1.2.2/datatables.min.js")
+    script(src="./javascripts/Editor-1.6.3/js/dataTables.editor.js")
     script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js')
     script(src="/socket.io/socket.io.js")
     script(src='./javascripts/logic.js')
