--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,5 +4,7 @@ html
         title= title
         link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css')
         link(rel='stylesheet', href='/stylesheets/style.css')
+        link(rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.15/b-1.3.1/se-1.2.2/datatables.min.css")
+        link(rel="stylesheet" type="text/css" href="./javascripts/Editor-1.6.3/css/editor.dataTables.css")
     body
         block content
